--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
     </div>
 
     <div id="game-container" style="display: none;">
-        <p id="timer">Time: 10 seconds</p>
+        <p id="timer">Time:<span id="countdown"></span></p>
         <div class="grid" id="grid"></div>
         <div id="buttons">
-            <button onclick="resetGame()">Reset</button>
         </div>
         <p id="scoreboard"></p>
     </div>
