--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,6 @@
     <canvas id="canvas" style="display: none;"></canvas>
 
     <div id="login-container" class="container">
-        <h2>Welcome to the Memory Game</h2>
         <form id="login-form">
             <label for="username">Enter Your Name:</label>
             <input type="text" id="username" required>
@@ -54,10 +53,11 @@
 
         <div id="buttons"></div>
         <p id="scoreboard"></p>
+        <button id="reset-button" onclick="resetGame()">Reset Game</button>
     </div>
 
     <div class="scoreboard-container container">
-        <h2>Scoreboard</h2>
+        <h2>Scoreboard <span class="cup-icon">🏆</span></h2>
         <table id="score-table">
             <thead>
                 <tr>
