--- a/client/index.html
+++ b/client/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory Game</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
     <header>
-        <img src="logo.png" alt="Logo" id="logo">
+        <img src="./assets/img/logo.png" alt="Logo" id="logo">
         <h1>Memory Game</h1>
     </header>
     <canvas id="canvas" style="display: none;"></canvas>
@@ -70,8 +70,8 @@
         </table>
     </div>
 
-    <script src="script.js"></script>
-    <script src="fireworks.js"></script>
+    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/fireworks.js"></script>
 </body>
 
 </html>
